[project]
name = "taskmanager-sdk"
version = "0.2.0"
description = "SDK for Task Manager API"
requires-python = ">=3.10"
license = "MIT"
keywords = ["vers", "sdk", "api", "vm", "orchestration"]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/hdresearch/python-sdk"
Repository = "https://github.com/hdresearch/python-sdk"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
